# dropbox2slack

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cdk.yml  test.yml
cdk/: .gitignore  cdk.json  package-lock.json  package.json
cdk/lib/: cdk-stack.ts
docs/: sequences.md
lambda/: README.md  pyproject.toml
lambda/src/lambda/: __init__.py
layer/: requirements.txt
src/dropbox2slack/: lambda_function.py
src/dropbox2slack/api/: dropboxapi.py  slackapi.py
src/dropbox2slack/util/: models.py
tests/dropbox2slack/: conftest.py
tests/dropbox2slack/api/: test_dropbox.py  test_slackapi.py
tests/dropbox2slack/lambda_function/: test_verify.py  test_webhook.py
tests/dropbox2slack/util/: test_models.py
