[project]
name = "dropbox2slack"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "zaki3mymy", email = "zaki.last@gmail.com" }
]
dependencies = [
    "pynamodb>=5.5.0",
    "boto3>=1.28.44",
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "moto>=4.2.2",
    "flake8>=5.0.4",
    "black>=23.9.0",
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "pytest-random>=0.2",
]

[tool.hatch.metadata]
allow-direct-references = true
