[project]
name = "dropbox2slack"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "zaki3mymy", email = "zaki.last@gmail.com" }
]
dependencies = [
    "pynamodb>=5.5.0",
    "boto3>=1.28.44",
    "requests>=2.31.0",
    "pydantic>=2.3.0",
    "aws_lambda_powertools>=2.24.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "moto>=4.2.2",
    "flake8>=5.0.4",
    "black>=23.9.0",
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "isort>=5.12.0",
    "httpretty>=1.1.4",
    "pytest-randomly>=3.15.0",
    "pyopenssl>=23.2.0",
]

[tool.rye.scripts]
format = { chain = ["format:isort", "format:black"] }
"format:black" = { cmd = "black ." }
"format:isort" = { cmd = "isort ." }

test = { chain = [
    "coverage:erase", "test:pytest", "coverage:xml"
] }
"test:pytest" = { cmd = "pytest --cov=src --cov-branch" }
"coverage:xml" = { cmd = "coverage xml" }
"coverage:erase" = { cmd = "coverage erase" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = ["src", "src/dropbox2slack",]
testpaths = ["tests",]

[tool.black]
line-length = 79
